@@ -1,3 +1,8 @@
+2018-09-29  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	* graph/grfill.c (grFillHLine): Fix cropping.
+	(grFillVLine): Refactor in line with `grFillHLine'.
+
 2018-09-26  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	* src/ftstring.c (Process_Event, event_help): Implement flushing.
